--- a/views/home.erb
+++ b/views/home.erb
@@ -1,3 +1,9 @@
-<h1>Rumbler</h1>
-<a href ="/signup">Sign Up</a>
-<a href ="/login">log</a>
+<h1>Welcome to Restock</h1>
+
+<a href="/login">Sign In</a>
+<a href="/login">Sign Up</a>
+
+<form action="/action_page.php">
+  Birthday: <input type="date" name="bday">
+  <input type="submit">
+</form>
