--- a/views/login.erb
+++ b/views/login.erb
@@ -1,15 +1,11 @@
-<form action="/login">
-  Email:<br>
-  <input type="text" name="userid">
-  <br>
-  Password:<br>
-  <input type ="password" name="psw">
-  <br>
-  <br>
-  <div class="but">
-    <button class="button">Submit</button>
-  </div>
-  <br>
-  <br>
-  <br>
-</form>
+<h1>Login</h1>
+<form action="/login" method="post">
+  <label>Email:</label>
+  <input type="email" name="email"><br>
+  <label>Password:</label>
+  <input type="password" name="password"><br>
+
+  <p>
+    <input type="submit">
+    </p>
+    </form>
