--- a/views/signup.erb
+++ b/views/signup.erb
@@ -1,6 +1,14 @@
 <h1>Sign Up</h1>
-
-Sign Up:<br>
-<input type="text" name="signup"
-
-<button class="button">Submit</button>
+<form id="signup" action="/signup" method="post">
+  <label>First Name</label><br>
+  <input type="text" name="first_name" required="true"><br>
+  <label>Last Name</label><br>
+  <input type="text" name="last_name" required="true"><br>
+  <label>Enter your date of birth</label><br>
+  <input type="date" name="birthday" required="true"><br>
+  <label>Email</label><br>
+  <input type="email" name="email" value="Enter your email" required="true"><br>
+  <label>Password</label><br>
+  <input type="password" name="password" required="true"><br>
+  <input type="submit">
+</form>
