--- a/views/signup.erb
+++ b/views/signup.erb
@@ -1,3 +1,7 @@
+
+<br>
+<br>
+<br>
 <h1>Sign Up</h1>
 <form id="signup" action="/signup" method="post">
   <label>First Name</label><br>
@@ -7,7 +11,7 @@
   <label>Enter your date of birth</label><br>
   <input type="date" name="birthday" required="true"><br>
   <label>Email</label><br>
-  <input type="email" name="email" value="Enter your email" required="true"><br>
+  <input type="email" name="email" value="" required="true"><br>
   <label>Password</label><br>
   <input type="password" name="password" required="true"><br>
   <input type="submit">
