--- a/public/main.css
+++ b/public/main.css
@@ -1,5 +1,7 @@
 body {
   background-color: #f5f5f5;
+  background-repeat: no-repeat;
+  position: absolute;
 }
 
 img {
@@ -20,3 +22,35 @@ form {
 h1{
   padding-left: 30px;
 }
+
+#preme {
+  background-color: #f5f5f5;
+  padding-left: 50px;
+  grid-template: 250px/ 400px 400px 400px;
+  grid-gap: 10px;
+  background-position: cover;
+  height: 300px;
+  width: 300px;
+} 
+
+  cursor: url('https://upload.wikimedia.org/wikipedia/en/0/03/A_Bathing_Ape_%28logo%29.png', auto;)
+}
+
+/* .sell {
+  justify-content: center;
+  font-size: 11px;
+  display: grid;
+  grid-template: 100px / 225px 125px 650px 100px;
+  grid-gap: 10px;
+  height: 250px;
+  width: 120%;
+  border-radius: 5px; */
+}
+/*
+#catalog {
+  justify-content: center;
+  display: grid;
+  grid-template: 350px / 350px 350px 350px;
+  grid-gap: 5%;
+  font-size: 12px;
+} */
