--- a/views/thanks.erb
+++ b/views/thanks.erb
@@ -1,3 +1,3 @@
-<h1>Thanks for signing up</h1>
-
+<a href="/login">Log in</a>
+<h1>Thank you for signup up</h1>
 <img src="https://upload.wikimedia.org/wikipedia/en/0/03/A_Bathing_Ape_%28logo%29.png">
